# curl

./: .azure-pipelines.yml  .cirrus.yml  .clang-tidy  .clang-tidy.yml  .cmake-format.yaml  .cvsignore  .dcignore  .dir-locals.el  .dnsd.pid  .dockerignore  .editorconfig  .ghpkg  .ghpkg.LICENSE  .git-blame-ignore-revs  .gitattributes  .gitignore  .lgtm.yml  .mailmap  .mailmap.license  .mergify.yml  .nobs_project.txt  .travis-iconv-env.sh  .travis.yml  .zuul.yaml  2  ARCHITECTURE.md  Android.mk  BUGS  BUILD_MASQUE_linux.md  BUILD_MASQUE_macOS.md  CHANGES  CHANGES.0  CHANGES.1999  CHANGES.2000  CHANGES.2001  CHANGES.2002  CHANGES.2003  CHANGES.2004  CHANGES.2005  CHANGES.md  (+164 more)
ares/: .cvsignore  .gitignore  AUTHORS  CHANGES  CVS-INFO  FILES  Makefile.am  Makefile.dj  Makefile.in  Makefile.inc  Makefile.m32  Makefile.msvc  Makefile.netware  Makefile.vc6  NEWS  README  README.cares  README.msvc  RELEASE-NOTES  TODO  acinclude.m4  aclocal.m4  acountry.c  adig.c  ahost.c  ares.h  ares__close_sockets.c  ares__get_hostent.c  ares__read_line.c  ares__timeval.c  ares_build.h.dist  ares_build.h.in  ares_cancel.3  ares_cancel.c  ares_data.c  ares_data.h  ares_destroy.3  ares_destroy.c  ares_destroy_options.3  ares_dns.h  (+98 more)
ares/m4/: cares-compilers.m4  cares-confopts.m4  cares-functions.m4  cares-override.m4  cares-reentrant.m4  cares-system.m4  reentrant.m4
ares/vc/: .cvsignore  vc.dsw  vc.ncb  vc.opt
docs/: .cvsignore  .gitignore  AI.md  ALTSVC.md  AMIGAOS.md  BINDINGS  BINDINGS.md  BUFQ.md  BUFREF.md  BUG-BOUNTY.md  BUGS  BUGS.md  CHECKSRC.md  CIPHERS-TLS12.md  CIPHERS.md  CLIENT-READERS.md  CLIENT-WRITERS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CODE_STYLE.md  CODE_VISUALIZATION.md  CONNECTION-FILTERS.md  CONTRIBUTE  CONTRIBUTE.md  CURL-DISABLE.md  CURLDOWN.md  CURL_TPM 2.0.md  DEPRECATE.md  DISTRO-DILEMMA  DISTROS.md  DYNBUF.md  EARLY-RELEASE.md  ECH.md  ESNI.md  EXPERIMENTAL.md  FAQ  FAQ.md  FEATURES  FEATURES.md  (+111 more)
docs/cmdline-opts/: .gitignore  CMakeLists.txt  MANPAGE.md  Makefile.am  Makefile.inc  _AUTHORS.md  _BUGS.md  _DESCRIPTION.md  _ENVIRONMENT.md  _EXITCODES.md  _FILES.md  _GLOBBING.md  _NAME.md  _OPTIONS.md  _OUTPUT.md  _PROGRESS.md  _PROTOCOLS.md  _PROXYPREFIX.md  _SEEALSO.md  _SYNOPSIS.md  _URL.md  _VARIABLES.md  _VERSION.md  _WWW.md  abstract-unix-socket.d  abstract-unix-socket.md  alt-svc.d  alt-svc.md  anyauth.d  anyauth.md  append.d  append.md  aws-sigv4-algorithm.md  aws-sigv4-mode.md  aws-sigv4-nb-encoding.d  aws-sigv4-signedheaders.md  aws-sigv4.d  aws-sigv4.md  basic.d  basic.md  (+599 more)
docs/examples/: .checksrc  .cvsignore  .gitignore  10-at-a-time.c  CMakeLists.txt  Makefile.am  Makefile.example  Makefile.inc  Makefile.m32  Makefile.mk  Makefile.netware  README  README.md  adddocsref.pl  address-scope.c  altsvc.c  anyauthput.c  asiohiper.cpp  asyncxfer_epoll.cpp  block_ip.c  cacertinmem.c  cert_revocation_check.c  certinfo.c  chkspeed.c  connect-to.c  cookie_interface.c  crawler.c  curlgtk.c  curlx.c  debug.c  default-scheme.c  ephiperfifo.c  evhiperfifo.c  externalsocket.c  fileupload.c  fopen.c  ftp-delete  ftp-delete.c  ftp-wildcard.c  ftp3rdparty.c  (+136 more)
docs/internals/: BUFQ.md  BUFREF.md  CHECKSRC.md  CLIENT-READERS.md  CLIENT-WRITERS.md  CODE_STYLE.md  CONNECTION-FILTERS.md  CREDENTIALS.md  CURLX.md  DYNBUF.md  HASH.md  HYPER.md  LLIST.md  MID.md  MQTT.md  MULTI-EV.md  NEW-PROTOCOL.md  PEERS.md  PORTING.md  RATELIMITS.md  README.md  SCORECARD.md  SPLAY.md  STRPARSE.md  THRDPOOL+QUEUE.md  THRDPOOL-AND-QUEUE.md  TIME-KEEPING.md  TLS-SESSIONS.md  UINT_SETS.md  WEBSOCKET.md
docs/libcurl/: .cvsignore  .gitignore  ABI  ABI.md  CMakeLists.txt  Makefile.am  Makefile.inc  curl_easy_cleanup.3  curl_easy_cleanup.md  curl_easy_conn_upkeep.3  curl_easy_duphandle.3  curl_easy_duphandle.md  (+228 more)
lib/: .checksrc  .cvsignore  .gitattributes  .gitignore  CMakeLists.txt  Makefile  Makefile.Watcom  Makefile.am  Makefile.b32  Makefile.b32.resp  Makefile.in  Makefile.inc  Makefile.m32  Makefile.mk  Makefile.netware  Makefile.riscos  Makefile.soname  Makefile.vc6  Makefile.vxworks  README.NSS  README.ares  README.cmake  README.curl_off_t  README.curlx  README.encoding  README.hostip  README.http2  README.httpauth  README.memoryleak  README.multi_socket  README.pingpong  README.pipelining  TODO.gnutls  align.h  altsvc.c  altsvc.h  amigaos.c  amigaos.h  api.c  api.h  (+687 more)
multi/: Makefile.am
scripts/: .checksrc  CMakeLists.txt  Makefile.am  badwords  badwords-all  badwords.ok  badwords.txt  cd2cd  cd2nroff  cdall  cdall.pl  checkperlsrc.sh  checksrc-all.pl  checksrc-all.sh  checksrc.pl  checksrc.sh  ciconfig.pl  cijobs.pl  cmakelint.sh  cmp-config.pl  completion.pl  config-since.sh  contributors.sh  contrithanks.sh  copyright.pl  coverage.sh  delta  dmaketgz  docker-entrypoint.sh  extract-unit-protos  firefox-db2pem.sh  installcheck.sh  log2changes.pl  maketgz  managen  maxline  mdlinkcheck  mk-ca-bundle.pl  mk-unity.pl  nroff2cd  (+15 more)
src/: .checksrc  .cvsignore  .gitignore  CMakeLists.txt  Makefile  Makefile-metalink.inc  Makefile.Watcom  Makefile.am  Makefile.b32  Makefile.in  Makefile.inc  Makefile.m32  Makefile.mk  Makefile.netware  Makefile.riscos  Makefile.vc6  RCa10956  checksrc.whitelist  config-amigaos.h  config-mac.h  config-netware.h  config-riscos.h  config-vms.h  config-win32.h  config.h  config.h.in  config2setopts.c  config2setopts.h  curl  curl-config.c.in  curl.rc  curlinfo.c  curlmsg.h  curlmsg.msg  curlmsg.sdl  curlmsg_vms.h  curlsrc.dsp  curlsrc.dsw  curlutil.c  curlutil.h  (+142 more)
tests/: .cvsignore  .gitignore  CI.md  CMakeLists.txt  FILEFORMAT  FILEFORMAT.md  Makefile.am  README  README.md  allversions.pm  appveyor.pm  azure.pm  badsymbols.pl  braking_test  breaking_test  buildinfo.txt  check-deprecated.pl  check-translatable-options.pl  config.in  configurehelp.pm.in  conftest.py  convsrctest.pl  curl_test_data.py  devtest.pl  dictserver.py  directories.pm  disable-scan.pl  ech_combos.py  ech_tests.sh  error-codes.pl  extern-scan.pl  ftp.pm  ftpserver.pl  ftpsserver.pl  getpart.pm  globalconfig.pm  http-server.pl  http2-server.pl  http3-server.pl  http_pipe.py  (+75 more)
(+8654 files in other folders)
